--- a/QOSF_task2_Han Liu.ipynb
+++ b/QOSF_task2_Han Liu.ipynb
@@ -58,6 +58,7 @@
    "source": [
     "# Author: Han Liu\n",
     "# Date: 09/20/2020\n",
+    "# Please see the bottom for the Bonus part.\n",
     "\n",
     "import numpy as np\n",
     "import math\n",
